--- a/Startpage.css
+++ b/Startpage.css
@@ -22,3 +22,8 @@
 body {
   background-color: #171717;
 }
+#BrandName {
+    font-family: "Jersey 25", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
