Major Change Test

--- a/Startpage.css
+++ b/Startpage.css
@@ -5,16 +5,15 @@
   height: 10%;
   width: 100%;
   left: 0;
-  border-bottom:solid #808080;
+  border-bottom:solid 2px #808080;
 }
 
-#Login {
+#Signup {
   position: absolute;
   right: 1%;
   top: 15%;
-  background-color: blueviolet;
-  border: solid 2px;
-  border-radius: 8px;
+  border: solid #b0b0b0 2px;
+  border-radius: 10%;
   height: 70%;
   width: 10%;
 }
@@ -27,4 +26,7 @@ body {
     font-weight: 400;
     font-style: normal;
     font-size: 20%;
+    color:white;
+    position:absolute;
+    left:5% 
   }
