--- a/Signup.css
+++ b/Signup.css
@@ -2,3 +2,32 @@ div {width:80%;
 height:80%
 background-color:}
 body{background-color:#060a1a ;}
+#topBar {
+    background-color: #171717;
+    position: absolute;
+    top: 0;
+    height: 10%;
+    width: 100%;
+    left: 0;
+    border-bottom: solid 2px #808080;
+}
+
+#Login {
+    position: absolute;
+    right: 1%;
+    top: 15%;
+    border: solid #b0b0b0 2px;
+    border-radius: 10%;
+    height: 70%;
+    width: 5%;
+    background-color: #171717;
+}
+#BrandName {
+    font-family: "Jersey 25", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 80%;
+    color: white;
+    position: absolute;
+    left: 5%
+}
