--- a/Startpage.css
+++ b/Startpage.css
@@ -15,8 +15,9 @@
   border: solid #b0b0b0 2px;
   border-radius: 10%;
   height: 70%;
-  width: 5%;
+  width: 10%;
  background-color: #171717;
+ color:white;
 }
 
 body {
@@ -29,5 +30,5 @@ body {
     font-size: 80%;
     color:white;
     position:absolute;
-    left:5% 
+    left:5% ;
   }
