--- a/Startpage.css
+++ b/Startpage.css
@@ -23,12 +23,12 @@
 body {
   background-color: #292929;
 }
-#BrandName {
+.BrandName {
     font-family: "Jersey 25", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 80%;
     color:white;
     position:absolute;
-    left:5% ;
+    left:5% ; 
   }
