--- a/Startpage.css
+++ b/Startpage.css
@@ -15,7 +15,7 @@
   border: solid #b0b0b0 2px;
   border-radius: 10%;
   height: 70%;
-  width: 10%;
+  width: 5%;
  background-color: #171717;
  color:white;
 }
@@ -31,4 +31,13 @@ body {
     color:white;
     position:absolute;
     left:5% ; 
+  }
+  #Login {
+    position: absolute;
+    right: 10%;
+    top: 15%;
+    height: 70%;
+    width: 5%;
+    background-color: #171717;
+    color: white;
   }
