--- a/LogSign.css
+++ b/LogSign.css
@@ -1,7 +1,11 @@
-#SignupForm, #LoginForm {
-    width: 80%;
+#SignupForm,
+#LoginForm {
+    width: 60%;
     height: 80%;
     background-color: #080217;
+    position: absolute;
+    top: 25%;
+    left: 20%
 }
 
 body {
@@ -23,8 +27,16 @@ body {
     font-family: "Jersey 25", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 80%;
+    font-size: 400%;
     color: white;
     position: absolute;
     left: 5%;
+    top:5%;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
 }
