--- a/Startpage.css
+++ b/Startpage.css
@@ -27,7 +27,7 @@ body {
     font-family: "Jersey 25", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 80%;
+    font-size: 200%;
     color:white;
     position:absolute;
     left:5% ; 
@@ -40,4 +40,5 @@ body {
     width: 5%;
     background-color: #171717;
     color: white;
+    border:#171717 solid;
   }
