--- a/LogSign.css
+++ b/LogSign.css
@@ -5,7 +5,7 @@
     background-color: #080217;
     position: absolute;
     top: 25%;
-    left: 20%
+    left: 20%;
 }
 
 body {
@@ -31,7 +31,7 @@ body {
     color: white;
     position: absolute;
     left: 5%;
-    top:5%;
+    top:-30%;
 }
 
 a:link,
