dropdown button testing

--- a/Startpage.css
+++ b/Startpage.css
@@ -86,7 +86,7 @@ header {
   background-color: #555;
 }
 
-/* Responsive design */
+
 @media (max-width: 768px) {
   .navbar .menu {
     display: none;
@@ -103,4 +103,7 @@ header {
   .dropdown.active .dropdown-menu {
     display: block;
   }
+  .dropdown-btn:hover {
+  rotate: 95deg;
+}
 }
