--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
     text-decoration: unset;
     border: none;
     text-decoration-color: transparent;
-    padding-left: 3dvh; 
+    padding-left: 3dvh;
 }
 
 #Title:hover {
@@ -35,15 +35,19 @@ body {
     display: flex;
     justify-content: center;
     color: white;
-    text-shadow:
-    0 0 7px #ffffff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px #4b4b4b,
-    0 0 82px #4b4b4b,
-    0 0 92px #4b4b4b,
-    0 0 102px #4b4b4b,
-    0 0 151px #4b4b4b;
+
     width: 100%;
     flex-grow: 1;
+}
+
+.glow {
+    text-shadow:
+        0 0 7px #ffffff,
+        0 0 10px #fff,
+        0 0 21px #fff,
+        0 0 42px #4b4b4b,
+        0 0 82px #4b4b4b,
+        0 0 92px #4b4b4b,
+        0 0 102px #4b4b4b,
+        0 0 151px #4b4b4b;
 }
