--- a/index.css
+++ b/index.css
@@ -50,4 +50,9 @@ body {
         0 0 92px #4b4b4b,
         0 0 102px #4b4b4b,
         0 0 151px #4b4b4b;
+        color:white;
+}
+#tools {
+    justify-self: flex-start;
+    flex-grow:4;
 }
