--- a/index.css
+++ b/index.css
@@ -42,16 +42,8 @@ body {
 
 .glow {
     text-shadow:
-        0 0 7px #ffffff,
-        0 0 10px #fff,
-        0 0 21px #fff,
-        0 0 42px #4b4b4b,
-        0 0 82px #4b4b4b,
-        0 0 92px #4b4b4b,
-        0 0 102px #4b4b4b,
-        0 0 151px #4b4b4b;
-        color:white;
-}
+        0 0 7px #4b4b4b,
+ color:white; }
 #tools {
     justify-self: flex-start;
     flex-grow:4;
